# locale-forge

./: .gitignore  AGENTS.md  Cargo.toml  README.md
src/: agent.rs  atomic_file.rs  catalog.rs  cli.rs  commands.rs  config.rs  lib.rs  main.rs  models.rs  state.rs  terminal.rs
src/agent/: openai.rs  progress.rs
src/catalog/: arb.rs  json.rs
src/commands/: progress.rs  state.rs
src/models/: remote.rs
tests/: cli.rs
