[package]
name = "locale-forge"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
clap = { version = "4.5", features = ["derive"] }
directories = "6.0"
formatjs_icu_messageformat_parser = "0.2.4"
reqwest = { version = "0.13.4", default-features = false, features = [
    "json",
    "rustls",
] }
rpassword = "7.4"
secrecy = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
sha2 = "0.10"
tempfile = "3.20"
thiserror = "2.0"
tokio = { version = "1.46", features = ["macros", "rt-multi-thread", "time"] }
unic-langid = "0.9"
url = "2.5"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
wiremock = "0.6"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.60", features = ["Win32_Storage_FileSystem"] }
